# template-models

./: .gitignore  Makefile  README.md  pyproject.toml
template_models/: __init__.py  llm_template_model.py  template_model.py
tests/: test_llm_template_models.py  test_template_model_vs_basemodel.py  test_template_models.py
