[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["leeparnell <152523161+leeparnell@users.noreply.github.com>"]
description = ""
name = "template-models"
packages = [{include = "template_models"}]
readme = "README.md"
version = "0.2.1"

[tool.poetry.dependencies]
python = "^3.11"
instructor = "^1.3.7"
pydantic = "^2.7.3"

[tool.poetry.group.dev.dependencies]
pi-conf = "^0.8.5.2"
pytest = "^8.2.2"
toml-sort = "^0.23.1"

[tool.poetry.group.llm]
optional = true

[tool.poetry.group.llm.dependencies]
qrev-instructor = "^0.5.4"

[tool.tomlsort]
all = true
in_place = true
overrides."tool.poetry.dependencies".first = ["python"]
